objects/Client_Contact_Individual__c.object
<CustomObject>
    <fields>
        <fullName>CCI_Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCI_Cell_Phone_Number__c</fullName>
        <label>Cell Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCI_First_Name_Preference__c</fullName>
        <label>First Name Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Name</fullName>
                    <default>true</default>
                    <label>First Name</label>
                </value>
                <value>
                    <fullName>Nickname</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCI_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Full_Name__c</fullName>
        <formula>CCI_First_Name__c &amp; " " &amp; CCI_Last_Name__c</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Middle_Name_or_Middle_Initial__c</fullName>
        <label>Middle Name or Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Nick_Name__c</fullName>
        <label>Nick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Preferred_Honorific__c</fullName>
        <label>Preferred Honorific</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chef</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Reverend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client Contact Individual</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Client Contact Individual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contact Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>CCI_Full_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>